# astroholic

./: .gitignore  LICENSE  README.md  meson.build  pyproject.toml
astroholic/: Makefile  __init__.py  lic.f90  lic.py  meson.build
astroholicenv/: pixi.toml
notebooks/: LIC.ipynb
